@@ -16,7 +16,7 @@
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 """
 
-version = '0.20090917'
+version = '0.20090922'
 
 import platform
 deftools = ['default']
