@@ -1565,11 +1565,12 @@ or
 </p>
 
 <pre>
- ------------------------------------------------------------------------
+ -------------------------------------------------------------------------
   -i   InFile   the  input data file name --- described in the manual
   -o  OutFile   the output data file name
   -h            print this help message and exit
-  -v            display program version and exit
+  -v            display program version, website, brief help info and exit
+  -a            display program version, website, and exit
   -c            data check only - the output data reviews the input data
   -q            suppress screen output except for warning messages
   -s  On|Off    On: include shear deformation or Off: neglect ...
@@ -1581,7 +1582,7 @@ or
   -t  value     convergence tolerance for modal analysis
   -p  value     pan rate for mode shape animation
   -r  value     matrix condensation method: 0, 1, 2, or 3
- ------------------------------------------------------------------------
+ -------------------------------------------------------------------------
 </pre>
 
 <li> Examples:<br>
